--- a/lib/messengyr_web/templates/page/signup.html.eex
+++ b/lib/messengyr_web/templates/page/signup.html.eex
@@ -1,12 +1,14 @@
 <div class="card login">
   <h1>Sign up for Messenger</h1>
 
-  <form>
-    <input type="text" placeholder="Email">
-    <input type="text" placeholder="Username">
-    <input type="password" placeholder="Password">
-
-    <button type="submit" class="signup">Sign up</button>
-  </form>
+  <%= form_for @user_changeset, page_path(@conn, :create_user), fn f -> %>
+    <%= text_input f, :email, placeholder: "Email" %>
+    <%= error_tag f, :email %>
+    <%= text_input f, :username, placeholder: "Username" %>
+    <%= error_tag f, :username %>
+    <%= text_input f, :password, placeholder: "Password", type: "password" %>
+    <%= error_tag f, :password %>
+    <%= submit "Sign up", class: "signup" %>
+  <% end %>
 
 </div>
