--- a/lib/messengyr_web/templates/page/login.html.eex
+++ b/lib/messengyr_web/templates/page/login.html.eex
@@ -1,10 +1,10 @@
 <div class="card login">
-  <h1>Log in to messengyr</h1>
+  <h1>Log in to Messengyr</h1>
 
-  <form>
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Password">
-
-    <button type="submit" class="login"></button>
-  </form>
+  <%= form_for @conn, page_path(@conn, :login_user), [as: :credentials], fn f -> %>
+    <%= text_input f, :username, placeholder: "Username" %>
+    <%= text_input f, :password, placeholder: "Password", type: "password" %>
+    <%= submit "Log in", class: "login" %>
+  <% end %>
+  
 </div>
