--- a/lib/messengyr_web/templates/chat/index.html.eex
+++ b/lib/messengyr_web/templates/chat/index.html.eex
@@ -1,3 +1,5 @@
 <!-- web/templates/chat/index.html.eex -->
 
+<div id="app"></div>
+
 <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
